--- a/A2/slidingtiles/app/src/main/res/values/strings.xml
+++ b/A2/slidingtiles/app/src/main/res/values/strings.xml
@@ -1,3 +1,25 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <string name="app_name">SlidingTiles</string>
+    <string name="title_activity_scoreboard_tabbed">ScoreboardTabbedActivity</string>
+    <string name="action_settings">Settings</string>
+    <string name="section_format">Hello World from section: %1$d</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="score">SCORE</string>
+    <string name="you_achieved_a_total_score_of">You achieved a total score of:</string>
+    <string name="_500">500</string>
+    <string name="new_high_score">New High Score!</string>
+    <string name="back" tools:ignore="DuplicateDefinition">Back to Main Menu</string>
+    <string name="your_scoreboard">Your Scoreboard</string>
+    <string name="back2">Back</string>
+    <string name="game">Game</string>
+    <string name="scores">Score</string>
+    <string name="sliding_tiles">Sliding Tiles</string>
+    <string name="_1000">1000</string>
+    <string name="scoreboard">Scoreboard</string>
+    <string name="my_scoreboard">My Scoreboard</string>
+    <string name="sliding_tiles_scoreboard">Sliding Tiles ScoreBoard</string>
+    <string name="back_to_main_menu">Back to Main Menu</string>
+    <string name="please_select_the_scoreboard_you_want_to_see">Please select the scoreboard you want to see</string>
 </resources>
