--- a/Phase2/GameCentre/app/src/main/res/values/strings.xml
+++ b/Phase2/GameCentre/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <string name="app_name">SlidingTiles</string>
+    <string name="app_name">GameCentre</string>
     <string name="undo">Undo</string>
     <string name="title_activity_scoreboard_tabbed">ScoreboardTabbedActivity</string>
     <string name="action_settings">Settings</string>
