--- a/Phase2/GameCentre/app/src/main/res/values/strings.xml
+++ b/Phase2/GameCentre/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="you_achieved_a_total_score_of">You achieved a total score of:</string>
     <string name="_500">500</string>
     <string name="new_high_score">New High Score!</string>
+    <string name="not_new_HS">Not a new high score, but pretty good</string>
     <string name="back" tools:ignore="DuplicateDefinition">Back to Main Menu</string>
     <string name="your_scoreboard">Your Scoreboard</string>
     <string name="back2">Back</string>
@@ -23,6 +24,17 @@
     <string name="sliding_tiles_scoreboard">Sliding Tiles ScoreBoard</string>
     <string name="back_to_main_menu">Back to Main Menu</string>
     <string name="please_select_the_scoreboard_you_want_to_see">Please select the scoreboard you want to see</string>
+
+
+    <!--  Resource specific  -->
     <string name="short_press">SHORT</string>
+    <string name="GameFile">gameFile</string>
     <string name="long_press">LONG</string>
+    <string name="SlidingTilesTxt">SlidingTiles.txt</string>
+    <string name="SimonTxt">Simon.txt</string>
+    <string name="MineSweeperTxt">Minesweeper.txt</string>
+    <string name="sharedUser">sharedUser</string>
+    <string name="thisUser">thisUser</string>
+    <string name="score_txt">Score.txt</string>
+
 </resources>
